syntax = "proto3";

option go_package = "github.com/NeptuneG/go-back/api/proto/scraper";
package api.proto.scraper;

service ScrapeService {
  rpc CreateScrapeLiveEventsJob(CreateScrapeLiveEventsJobRequest)
      returns (CreateScrapeLiveEventsJobResponse);
}

message CreateScrapeLiveEventsJobRequest {
  string live_house_slug = 1;
  string year_month = 2;
}

message CreateScrapeLiveEventsJobResponse { string job_id = 1; }
